src/test/ui/async-await/no-non-guaranteed-initialization.stderr
error[E0381]: use of possibly uninitialized variable: `y`
  --> $DIR/no-non-guaranteed-initialization.rs:12:5
   |
LL |     y
   |     ^ use of possibly uninitialized `y`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
